  * Symbolic links to shared libraries can now provide path-encoded
    soname dependencies (only manually, never automatically).
  * Removed outdated code with convoluted code for preventing providing
    soname dependencies in some cases; that code has been functionally
    replaced by limiting automatic soname dependencies to system library
    directories.

Changes in 0.70.0:
  o The client and server protocol versions have been changed and
    the filecontainer version number updated.
    * Upgrading from previous versions of Conary to 0.70.0 will
      require downloading a old-format changeset file from
      ftp://download.rpath.com/pub/conary/
    * Adding path hash data to TroveInfo overflowed the amount of
      storage space available in a StreamSet when a trove contained
      several thousand files.  In order to accommodate larger data
      stored in StreamSets, we have changed the way data sizes are
      handled.
    * With the changes to StreamSet, LargeStreamSet is obsolete.
      Changeset files used to used LargeStreamSet to represent data.
      Since we now just use a StreamSet, the changeset file format
      changed.
    * Since this version of Conary is incompatible with previous
      versions, we took this opportunity to do database and repository
      migrations that will allow us to make significant code cleanups
      in the near future.

 o Other smaller changes
    * Conary now does the right thing if the same trove is listed
      twice in an update due to recursion (it checks for duplicate
      installs of the same trove).
    * A bug where None would show up in CONARY files when an
      autosource file changed contents but did not change names has
      been fixed.

Changes in 0.62.16:
  * The "conary update" and "conary erase" commands now display the actions
    they take as they run (similar to --info output).
  * The --info output for "conary erase" and "conary update" has been
    reworked to be more user-friendly.