@@ -20,6 +20,8 @@ Changes in 0.70.1:
     soname dependencies in some cases; that code has been functionally
     replaced by limiting automatic soname dependencies to system library
     directories.
+  * Instead of complaining about hardlinks spanning directories, Conary
+    simply creates one link group per directory per hardlinked file.
 
 Changes in 0.70.0:
   o The client and server protocol versions have been changed and
